[project]
name = "new-oss-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "openai>=2.8.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "vllm==0.10.2",
    "uvicorn>=0.38.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "tqdm>=4.67.1",
]
